--- a/pd-manual-preview-1/pdmanual.css
+++ b/pd-manual-preview-1/pdmanual.css
@@ -102,34 +102,34 @@ H1 {
 	font-size:   32.7pt;
 	text-align:  center;
 	font-weight: normal;
-	font-family: serif;
+	font-family: Georgia, serif;
 	
 }
 H2 {
 	font-size:   22.7pt;
 	text-align:  center;
 	font-weight: normal;
-	font-family: serif;
+	font-family: Georgia, serif;
 }
 H3 {
 	font-size:   14.7pt;
 	text-align:  left;
-	font-family: serif;
+	font-family: Georgia, serif;
 }
 H4 {
 	font-size:   12.7pt;
 	text-align:  left;
-	font-family: serif;
+	font-family: Georgia, serif;
 }
 H5 {
 	font-size:   10.7pt;
 	text-align:  left;
-	font-family: serif;
+	font-family: Georgia, serif;
 }
 H6 {
 	font-size:   10.7pt;
 	text-align:  left;
-	font-family: serif;
+	font-family: Georgia, serif;
 }
 
 H1, H2, H3, H4, H5, H6, ol, ul, mark, PRE { 
