--- a/pd-manual-preview-1/pdmanual.css
+++ b/pd-manual-preview-1/pdmanual.css
@@ -15,6 +15,14 @@ BODY.dark-theme {
 	--color: 	   #ffffff;
 }
 
+BODY.serif {	
+	--font-family: Georgia, serif;
+}
+
+BODY.sans-serif {	
+	--font-family: Helevetica, sans-serif; 
+}
+
 P { 
 	--color: 	   #3E4349; /*#3E4349;*/
 }
@@ -87,7 +95,7 @@ a.dark-theme:visited {
 BODY { 
 	background:  var(--background) ;
 	color: 	     var(--color);
-	font-family: Helevetica, sans-serif;
+	font-family: var(--font-family);  /*Georgia, serif; */ /*Helevetica, sans-serif;*/
 	font-size:   12.7pt; /* this is because there were many <p> missing. We can change this value to 7pt to easily detect missing <p> */
 	line-height: 1.6;
 	}
@@ -212,7 +220,7 @@ a.green:visited {
 
 /* button like a link */
 
-.btn-toggle {
+.btn-toggle, .btn-toggle-font {
   background-color: transparent;
   border: none;
   color: #666666;
