--- a/pd-manual-preview-1/pdmanual.css
+++ b/pd-manual-preview-1/pdmanual.css
@@ -33,7 +33,6 @@ BODY.sans-serif {
 }
 
 
-
 P { 
 	--color: 	   #3E4349; /*#3E4349;*/
 }
@@ -59,6 +58,22 @@ PRE {
 
 PRE.dark-theme { 
    --color: #303136;
+}
+
+tr:nth-child(even) {
+	--background-color: #f0f0f0;
+	}
+	
+tr.dark-theme:nth-child(even) {
+	--background-color: #303136;
+	}
+	
+table, td, th {
+  --ccolor: #3E4349;
+}
+
+table.dark-theme, td.dark-theme, th.dark-theme {
+  --ccolor: #BCC0C3;
 }
 
 CODE { 
@@ -172,6 +187,18 @@ PRE {
    padding: 8px;
    font-family: 'Consolas', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
 }
+
+table, td, th {
+  border: 1px solid black;
+  color: var(--ccolor);
+  font-size: 12.7pt;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+tr:nth-child(even) {background-color: var(--background-color);}
 
 CODE { 
    font-size: 80%;
