--- a/pd-manual-preview-1/pdmanual.css
+++ b/pd-manual-preview-1/pdmanual.css
@@ -39,7 +39,15 @@ P {
 
 P.dark-theme {
 	--color: 	   #BCC0C3;
-}	
+}
+
+ul { 
+	--color: 	   #3E4349; /*#3E4349;*/
+}
+
+ul.dark-theme {
+	--color: 	   #BCC0C3;
+}		
 
 
 H1, H2, H3, H4, H5, H6, ol, ul, mark, PRE { 
@@ -202,7 +210,7 @@ table {
 tr:nth-child(even) {background-color: var(--background-color);}
 
 CODE { 
-   font-size: 80%;
+   /*font-size: 80%;*/
    background-color:var(--color);
    text-align:  left;
    border-radius: 8px;
@@ -218,6 +226,14 @@ ol {
 
 
 P {
+	font-size:   12.7pt;
+	text-align:  left;
+	line-height: 1.6;
+	color: var(--color);
+	line-height: 1.4em;
+}
+
+ul {
 	font-size:   12.7pt;
 	text-align:  left;
 	line-height: 1.6;
